yamls/AKS/network-policies/calico/global-network-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
    name: global-deny-policy
spec:
    selector: all()
    types:
    - Egress
    egress:
    - action: Log
      destination:
        nets:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    - action: Allow
      destination: {}
